syntax = "proto3";
package event_store.client.monitoring;
option java_package = "com.eventstore.dbclient.proto.monitoring";

service Monitoring {
	rpc Stats(StatsReq) returns (stream StatsResp);	
}

message StatsReq {
	bool use_metadata = 1;
	uint64 refresh_time_period_in_ms = 4;
}

message StatsResp {
	map<string, string> stats = 1;
}
